fix: project react todo list on mobile

--- a/projetos/todo-list-react/src/components/Modal.module.css
+++ b/projetos/todo-list-react/src/components/Modal.module.css
@@ -22,6 +22,12 @@
     text-align: center;
 }   
 
+@media only screen and (max-width: 500px) {
+    .modal {
+        width: 95%;
+    }
+}
+
 .modal h2 {
     margin-bottom: 1em;
 }
